services/gitlab/tcproute-ssh.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitlab-ssh
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab
      sectionName: ssh
  rules:
    - backendRefs:
        - name: gitlab-gitlab-shell
          port: 22
